<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <PreferenceCategory
            android:title="Arduino Host Information">

    <EditTextPreference
            android:key="@string/pref_hostname_key"
            android:title="@string/pref_hostname_title"
            android:defaultValue="@string/pref_hostname_default"
            android:dialogTitle="@string/pref_hostname_title"
            android:summary="@string/pref_hostname_summary"/>

        <EditTextPreference
                android:key="@string/pref_hostport_key"
                android:title="@string/pref_hostport_title"
                android:defaultValue="@string/pref_hostport_default"
                android:dialogTitle="@string/pref_hostport_title"
                android:summary="@string/pref_hostport_summary"/>

    </PreferenceCategory>




</PreferenceScreen>